[package]
    edition = "2021"
    name = "aimeqtt"
    version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
    name = "aimeqtt"

[dependencies]
    tokio = { version = "1", features = ["full"] }
    tracing = "0.1"
    tracing-subscriber = "0.3"
